# FibrilSite

./: README.md  fibril_grooves_extractor.ipynb  pyproject.toml  setup.py
site_alignment/: 01_run_fibril_site_surface_feature_mapping.sh  02_run_fibril_site_registeration.sh  03_run_fibril_site_alignment_analysis.sh  README.md  fibril_site_alignment_analysis.ipynb
site_alignment/scripts/: fibril_site_alignment_analysis.py  fibril_site_input_feats_mapper.py  fibril_site_registeration.py
src/fibrilsite/site_alignment/: align.py
src/fibrilsite/site_alignment_analysis/: __init__.py  alignment_analysis.py
src/fibrilsite/site_identification/: __init__.py  identify.py
